Version 5.9.11
- Made it so defining a _clkmode enum in C works as intended

Version 5.9.10
- Added a LOT of helpful optimizations contributed by Ada Gottensträter
- Added __HAVE_FCACHE__ define if FCACHE is enabled (also contributed by Ada)
- Added --nostdlib flag to suppress default include files
- Added KILL function to delete files in BASIC
- Added ELSE clause to single line IF in BASIC
- Actually fail compilation if a preprocessor #error directive is found in Spin
- Fixed some bugs in time related functions
- Fixed FCACHE not being enabled during system module compilation
- Fixed a nasty condition code printing bug (thanks Ada!)
- Fixed DEBUG with multiple return valued functions
- Merged Ada's change to support Shift-JIS character encoding
- Merged Evan's smartpin SD card reading code for much faster SD card access on P2
- Updated FatFs to newer version

Version 5.9.9
- Added special preprocessor comments {$flexspin ... } for FlexSpin specific code.
- Allow dynamic sign/zero extend on P1 (thanks Ada)
- Fixed variable redeclaration in Basic OPTION IMPLICIT
- Fixed an immediate addressing bug that showed up with DECLARE ALIAS sometimes
- Fixed curdir$() problems in BASIC
- Fixed an issue with += of strings where the rhs is a function call
- Fixed some bugs in PUT/GET processing when the result is read
- Made dir$("*",fbNormal) skip directories
- Preliminary support for anonymous structures and unions in C
- Recognized new Spin2 BYTEFIT and WORDFIT keywords

Version 5.9.8
- Fixed a crash in nucode compilation
- Fixed DECLARE ALIAS in bytecode mode

Version 5.9.7
- Added some more bit-banging optimizations (e.g. bith/bitl -> bitc)
- Added a new optimization for simple FOR loops with constant bounds
- Added special function optimizations for pinread/pinwrite
- Added SIZEOF operator to BASIC
- Added BITREV function to BASIC
- Added ALIAS, DECLARE, EXTERN, LINE, and LIB keywords to BASIC
- Added support for DLY() to default -g debugging