@@ -2086,6 +2086,7 @@ struct reservedword basic_keywords[] = {
   { "as", BAS_AS },
   { "asc", BAS_ASC },
   { "asm", BAS_ASM },
+  { "boolean", BAS_BOOLEAN },
   { "__builtin_alloca", BAS_ALLOCA },
   { "byref", BAS_BYREF },
   { "byte", BAS_BYTE },
@@ -2147,12 +2148,14 @@ struct reservedword basic_keywords[] = {
   { "orelse", BAS_ORELSE },
   { "output", BAS_OUTPUT },
   { "pointer", BAS_POINTER },
+  { "preserve", BAS_PRESERVE },
   { "print", BAS_PRINT },
   { "private", BAS_PRIVATE },
   { "program", BAS_PROGRAM },
   { "ptr", BAS_PTR },
   { "put", BAS_PUT },
   { "read", BAS_READ },
+  { "redim", BAS_REDIM },
   { "restore", BAS_RESTORE },
   { "return", BAS_RETURN },
   { "_sametypes", BAS_SAMETYPES },
