@@ -1,5 +1,7 @@
 Version 5.9.11
+- Added BOOLEAN keyword to BASIC
 - Made it so defining a _clkmode enum in C works as intended
+- Reserved REDIM and PRESERVE keywords in BASIC
 
 Version 5.9.10
 - Added a LOT of helpful optimizations contributed by Ada Gottensträter
